--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <link rel="stylesheet" href="stylesheets/style.css">
@@ -58,10 +58,10 @@
                 <ul>
                     <li><a href="https://www.linkedin.com/in/rajan-makwana-a47826220/" target="blank">
                             <i class="fab fa-linkedin-in"></i></a></li>
-                    <li><a href="https://github.com/AeGON83" target="blank"><i class="fab fa-github"></i></i></a></li>
-                    <li><a href="https://twitter.com/rajansinh83" target="blank"><i class="fab fa-twitter"
+                    <li><a href="https://github.com/AeGON83" target="_blank"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://twitter.com/rajansinh83" target="_blank"><i class="fab fa-twitter"
                                 target="blank"></i></a></li>
-                    <li><a href="https://www.instagram.com/" target="blank">
+                    <li><a href="https://www.instagram.com/" target="_blank">
                             <i class="fab fa-instagram"></i></a></li>
                 </ul>
 
