--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <p>
                     <span><i class="fa-solid fa-graduation-cap"></i>EDUCATION</span>
                     I am currently enrolled in the second year of the Bachelor of Computer Applications (BCA) program at
-                    MSU Baroda. In 2021, I graduated with a BSc in Chemistry.
+                    MSU Baroda.
                 </p>
                 <p>
                     <span><i class="fa-solid fa-earth"></i>HOBBIES</span>Watching sports and movies, traveling, using
