--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="download_cv">
             <div id="b_container">
                 <div class="buttons" id="d_buttons">
-                    <a class="buttons" id="download" href="#">CV</a>
+                    <a class="buttons" id="download" href="https://drive.google.com/file/d/1h56SZ2RaL-dIJSkOgQ-mEO4G7FXgcjv1/view?usp=sharing">CV</a>
                     <a class="buttons" id="about_me">ABOUT ME</a>
                 </div>
             </div>
